<resources>
    <string name="app_name">Gasto de Viagens</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">Kms por litro</string>
    <string name="gasto_total">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="calcular">Calcular</string>
</resources>